--- a/style.css
+++ b/style.css
@@ -2,13 +2,13 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    z-index: 100;
 }
 
 .container {
     min-height: 100vh;
     width: 100%;
     padding: 10px 20px;
+    background:linear-gradient(-45deg,rgb(70, 70, 255),violet,pink,#fff);
 }
 
 .traffic {
